--- a/HouseAccounting.Web/Views/Shared/_Layout.cshtml
+++ b/HouseAccounting.Web/Views/Shared/_Layout.cshtml
@@ -23,6 +23,8 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Osoby", "Index", "User")</li>
+                    <li>@Html.ActionLink("Kategorie", "Index", "Category")</li>
                 </ul>
             </div>
         </div>
