--- a/HouseAccounting.Web/Views/Person/Index.cshtml
+++ b/HouseAccounting.Web/Views/Person/Index.cshtml
@@ -1,13 +1,13 @@
-﻿@model IEnumerable<HouseAccounting.Model.Classes.User>
+﻿@model IEnumerable<HouseAccounting.DTOS.PersonDto>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Osoby";
 }
 
-<h2>Index</h2>
+<h2>Osoby</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Vytvořit novou osobu", "Create")
 </p>
 <table class="table">
     <tr>
