--- a/HouseAccounting.Web/Views/Category/Index.cshtml
+++ b/HouseAccounting.Web/Views/Category/Index.cshtml
@@ -1,13 +1,13 @@
-﻿@model IEnumerable<HouseAccounting.Model.Classes.Category>
+﻿@model IEnumerable<HouseAccounting.DTOS.CategoryDto>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Kategorie";
 }
 
-<h2>Index</h2>
+<h2>Kategorie</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Vytvořit novou kategorii", "Create")
 </p>
 <table class="table">
     <tr>
@@ -23,26 +23,27 @@
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Description)
-        </td>
-        <td>
-            @if (item.User != null)
-            {
-                @Html.DisplayFor(modelItem => item.User.FirstName)
-            }
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Description)
+            </td>
+            <td>
+                @if (item.Person != null)
+                {
+                    @Html.DisplayFor(modelItem => item.Person.FirstName)
+                }
+            </td>
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
+                @Html.ActionLink("Details", "Details", new { id = item.Id }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+            </td>
+        </tr>
+    }
 
 </table>
