--- a/HouseAccounting.Web/Views/Person/Create.cshtml
+++ b/HouseAccounting.Web/Views/Person/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model HouseAccounting.Model.Classes.User
+﻿@model HouseAccounting.DTOS.PersonDto
 
 @{
     ViewBag.Title = "Create";
@@ -12,7 +12,7 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>User</h4>
+        <h4>Person</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
