--- a/HouseAccounting.Web/Views/Shared/_Layout.cshtml
+++ b/HouseAccounting.Web/Views/Shared/_Layout.cshtml
@@ -16,15 +16,20 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Domácí účetnictví", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                    <li>@Html.ActionLink("Osoby", "Index", "User")</li>
-                    <li>@Html.ActionLink("Kategorie", "Index", "Category")</li>
+                    @*<li>@Html.ActionLink("About", "About", "Home")</li>
+                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>*@
+                    <li class="dropdown">
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Číselníky<span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li>@Html.ActionLink("Osoby", "Index", "User")</li>
+                            <li>@Html.ActionLink("Kategorie", "Index", "Category")</li>
+                        </ul>
+                    </li>
                 </ul>
             </div>
         </div>
