CRUD operations for Person

--- a/HouseAccounting.Web/Views/Person/Index.cshtml
+++ b/HouseAccounting.Web/Views/Person/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<HouseAccounting.DTOS.PersonDto>
+﻿@model HouseAccounting.Web.Models.Persons.PersonListViewModel
 
 @{
     ViewBag.Title = "Osoby";
@@ -11,27 +11,23 @@
 </p>
 <table class="table">
     <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.FirstName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.LastName)
-        </th>
+        <th>Jméno</th>
+        <th>Příjmení</th>
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
+@foreach (var person in Model.Persons) {
     <tr>
         <td>
-            @Html.DisplayFor(modelItem => item.FirstName)
+            @Html.DisplayFor(modelItem => person.FirstName)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.LastName)
+            @Html.DisplayFor(modelItem => person.LastName)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
+            @Html.ActionLink("Edit", "Edit", new { id=person.Id }) |
+            @Html.ActionLink("Details", "Details", new { id=person.Id }) |
+            @Html.ActionLink("Delete", "Delete", new { id=person.Id })
         </td>
     </tr>
 }
