--- a/HouseAccounting.Web/Views/Person/Edit.cshtml
+++ b/HouseAccounting.Web/Views/Person/Edit.cshtml
@@ -1,15 +1,17 @@
-﻿@model HouseAccounting.Web.Models.Persons.PersonCreateViewModel
+﻿@model HouseAccounting.Web.Models.Persons.PersonEditViewModel
 
-<h2>Nová osoba</h2>
+<h2>Editace osoby</h2>
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        @Html.HiddenFor(model => model.Person.Id)
+
         <div class="form-group">
             @Html.LabelFor(model => model.Person.FirstName, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -28,7 +30,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Vytvořit" class="btn btn-default" />
+                <input type="submit" value="Uložit" class="btn btn-default" />
             </div>
         </div>
     </div>
