Partial view for person edit

--- a/HouseAccounting.Web/Views/Person/Index.cshtml
+++ b/HouseAccounting.Web/Views/Person/Index.cshtml
@@ -25,9 +25,9 @@
             @Html.DisplayFor(modelItem => person.LastName)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=person.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=person.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=person.Id })
+            @Html.ActionLink("Editovat", "Edit", new { id=person.Id }) |
+            @Html.ActionLink("Detail", "Details", new { id=person.Id }) |
+            @Html.ActionLink("Smazat", "Delete", new { id=person.Id })
         </td>
     </tr>
 }
