--- a/HouseAccounting.Web/Views/Category/Index.cshtml
+++ b/HouseAccounting.Web/Views/Category/Index.cshtml
@@ -1,8 +1,4 @@
-﻿@model IEnumerable<HouseAccounting.DTOS.CategoryDto>
-
-@{
-    ViewBag.Title = "Kategorie";
-}
+﻿@model HouseAccounting.Web.Models.Categories.CategoryListViewModel
 
 <h2>Kategorie</h2>
 
@@ -11,39 +7,32 @@
 </p>
 <table class="table">
     <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Description)
-        </th>
-        <th>
-            Osoba
-        </th>
+        <th>Název</th>
+        <th>Popis</th>
+        <th>Osoba</th>
         <th></th>
     </tr>
 
-    @foreach (var item in Model)
-    {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Description)
-            </td>
-            <td>
-                @if (item.Person != null)
-                {
-                    @Html.DisplayFor(modelItem => item.Person.FirstName)
-                }
-            </td>
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-                @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.Id })
-            </td>
-        </tr>
-    }
+@foreach (var category in Model.Categories) {
+    <tr>
+        <td>
+            @Html.DisplayFor(modelItem => category.Name)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => category.Description)
+        </td>
+        <td>
+            @if (category.Person != null)
+            {
+                @Html.DisplayFor(modelItem => category.Person.FullName)
+            }
+        </td>
+        <td>
+            @Html.ActionLink("Editovat", "Edit", new { id=category.Id }) |
+            @Html.ActionLink("Detail", "Details", new { id=category.Id }) |
+            @Html.ActionLink("Smazat", "Delete", new { id=category.Id })
+        </td>
+    </tr>
+}
 
 </table>
