views and repositories for incomes and expenditures

--- a/HouseAccounting.Web/Views/ExpenditureCategory/Index.cshtml
+++ b/HouseAccounting.Web/Views/ExpenditureCategory/Index.cshtml
@@ -1,9 +1,9 @@
-﻿@model HouseAccounting.Web.Models.Categories.CategoryListViewModel
+﻿@model HouseAccounting.Web.Models.ExpenditureCategories.ExpenditureCategoryListViewModel
 
-<h2>Kategorie</h2>
+<h2>Kategorie výdajů</h2>
 
 <p>
-    @Html.ActionLink("Vytvořit novou kategorii", "Create")
+    @Html.ActionLink("Vytvořit novou kategorii výdajů", "Create")
 </p>
 <table class="table">
     <tr>
