--- a/HouseAccounting.Web/Views/Shared/_Layout.cshtml
+++ b/HouseAccounting.Web/Views/Shared/_Layout.cshtml
@@ -27,7 +27,8 @@
                         <a class="dropdown-toggle" data-toggle="dropdown" href="#">Číselníky<span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li>@Html.ActionLink("Osoby", "Index", "Person")</li>
-                            <li>@Html.ActionLink("Kategorie", "Index", "Category")</li>
+                            <li>@Html.ActionLink("Kategorie příjmů", "Index", "IncomeCategory")</li>
+                            <li>@Html.ActionLink("Kategorie výdajů", "Index", "ExpenditureCategory")</li>
                         </ul>
                     </li>
                 </ul>
