--- a/HouseAccounting.Web/Views/Income/Delete.cshtml
+++ b/HouseAccounting.Web/Views/Income/Delete.cshtml
@@ -12,7 +12,7 @@
 
         <div class="form-actions no-color">
             @Html.ActionLink("Zpět na seznam příjmů", "Index")
-            <input type="submit" value="Smazat" class="btn btn-default" />
+            <input type="submit" value="Smazat" class="btn btn-primary" />
         </div>
     }
 </div>
