--- a/HouseAccounting.Web/Views/IncomeCategory/Details.cshtml
+++ b/HouseAccounting.Web/Views/IncomeCategory/Details.cshtml
@@ -1,6 +1,6 @@
 ﻿@model HouseAccounting.Web.Models.IncomeCategories.IncomeCategoryDetailsViewModel
 
-<h2>Detail kategorie příjmů</h2>
+<h2>Detail příjmu</h2>
 
 <div>
     <hr />
