--- a/HouseAccounting.Web/Views/ExpenditureCategory/Create.cshtml
+++ b/HouseAccounting.Web/Views/ExpenditureCategory/Create.cshtml
@@ -30,7 +30,8 @@
         <div class="form-group">
             <label class="control-label col-md-2" for="Osoba">Osoba</label>
             <div class="col-md-10">
-                @Html.DropDownListFor(model => model.SelectedPersonId, new SelectList(Model.Persons, "Id", "FullName"))
+                @Html.DropDownListFor(model => model.SelectedPersonId,
+                    new SelectList(Model.Persons, "Id", "FullName"), new { @class = "form-control" })
             </div>
         </div>
 
