--- a/HouseAccounting.Web/Views/Income/Create.cshtml
+++ b/HouseAccounting.Web/Views/Income/Create.cshtml
@@ -30,30 +30,33 @@
         <div class="form-group">
             <label class="control-label col-md-2" for="Osoba">Osoba</label>
             <div class="col-md-10">
-                @Html.DropDownListFor(model => model.SelectedPersonId, new SelectList(Model.Persons, "Id", "FullName"))
+                @Html.DropDownListFor(model => model.SelectedPersonId,
+                    new SelectList(Model.Persons, "Id", "FullName"), new { @class = "form-control" })
             </div>
         </div>
 
         <div class="form-group">
             <label class="control-label col-md-2" for="Osoba">Kategorie</label>
             <div class="col-md-10">
-                @Html.DropDownListFor(model => model.SelectedCategoryId, new SelectList(Model.Categories, "Id", "Name"))
+                @Html.DropDownListFor(model => model.SelectedCategoryId,
+                    new SelectList(Model.Categories, "Id", "Name"), new { @class = "form-control" })
             </div>
         </div>
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Uložit" class="btn btn-default" />
+                <input type="submit" value="Uložit" class="btn btn-primary" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Zpět na seznam kategorií příjmů", "Index")
+    @Html.ActionLink("Zpět na seznam příjmů", "Index")
 </div>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
+
 
