--- a/HouseAccounting.Web/Views/Income/IncomeEdit.cshtml
+++ b/HouseAccounting.Web/Views/Income/IncomeEdit.cshtml
@@ -18,10 +18,10 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Income.Description, htmlAttributes: new {@class = "control-label col-md-2"})
+            @Html.LabelFor(model => model.Income.Description, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Income.Description, new {htmlAttributes = new {@class = "form-control"}})
-                @Html.ValidationMessageFor(model => model.Income.Description, "", new {@class = "text-danger"})
+                @Html.EditorFor(model => model.Income.Description, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Income.Description, "", new { @class = "text-danger" })
             </div>
         </div>
 
@@ -30,13 +30,25 @@
             <div class="form-group">
                 <label class="control-label col-md-2" for="Osoba">Osoba</label>
                 <div class="col-md-10">
-                    @Html.DropDownListFor(model => model.SelectedPersonId, new SelectList(Model.Persons, "Id", "FullName"))
+                    @Html.DropDownListFor(model => model.SelectedPersonId,
+                        new SelectList(Model.Persons, "Id", "FullName"), new { @class = "form-control" })
+                </div>
+            </div>
+        }
+
+        @if (@Model.Categories != null)
+        {
+            <div class="form-group">
+                <label class="control-label col-md-2" for="Osoba">Kategorie</label>
+                <div class="col-md-10">
+                    @Html.DropDownListFor(model => model.SelectedCategoryId,
+                        new SelectList(Model.Categories, "Id", "Name"), new { @class = "form-control" })
                 </div>
             </div>
         }
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Uložit" class="btn btn-default" />
+                <input type="submit" value="Uložit" class="btn btn-primary" />
             </div>
         </div>
     </div>
