--- a/HouseAccounting.Web/Views/IncomeCategory/Create.cshtml
+++ b/HouseAccounting.Web/Views/IncomeCategory/Create.cshtml
@@ -27,16 +27,20 @@
             </div>
         </div>
 
-        <div class="form-group">
-            <label class="control-label col-md-2" for="Osoba">Osoba</label>
-            <div class="col-md-10">
-                @Html.DropDownListFor(model => model.SelectedPersonId, new SelectList(Model.Persons, "Id", "FullName"))
+        @if (Model.Persons != null)
+        {
+            <div class="form-group">
+                <label class="control-label col-md-2" for="Osoba">Osoba</label>
+                <div class="col-md-10">
+                    @Html.DropDownListFor(model => model.SelectedPersonId,
+                     new SelectList(Model.Persons, "Id", "FullName"), new { @class = "form-control" })
+                </div>
             </div>
-        </div>
+        }
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Uložit" class="btn btn-default" />
+                <input type="submit" value="Uložit" class="btn btn-primary" />
             </div>
         </div>
     </div>
