--- a/HouseAccounting.Web/Views/Person/Delete.cshtml
+++ b/HouseAccounting.Web/Views/Person/Delete.cshtml
@@ -7,12 +7,13 @@
     <hr />
     @Html.Partial("PersonDetail", Model.Person)
 
-    @using (Html.BeginForm()) {
+    @using (Html.BeginForm())
+    {
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Smazat" class="btn btn-default" /> |
-            @Html.ActionLink("Zpět na seznam osob", "Index")
+            @Html.ActionLink("Zpět na seznam osob", "Index") |
+            <input type="submit" value="Smazat" class="btn btn-primary" />
         </div>
     }
 </div>
