--- a/HouseAccounting.Web/Views/ExpenditureCategory/CategoryEdit.cshtml
+++ b/HouseAccounting.Web/Views/ExpenditureCategory/CategoryEdit.cshtml
@@ -35,11 +35,8 @@
                 </div>
             </div>
         }
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Uložit" class="btn btn-primary" />
-            </div>
-        </div>
+
+        @Html.Partial("_ButtonSave")
     </div>
 }
 
