--- a/HouseAccounting.Web/Views/Person/PersonEdit.cshtml
+++ b/HouseAccounting.Web/Views/Person/PersonEdit.cshtml
@@ -25,11 +25,7 @@
             </div>
         </div>
 
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Uložit" class="btn btn-primary" />
-            </div>
-        </div>
+        @Html.Partial("_ButtonSave")
     </div>
 }
 
