--- a/HouseAccounting.Web/Views/IncomeCategory/CategoryEdit.cshtml
+++ b/HouseAccounting.Web/Views/IncomeCategory/CategoryEdit.cshtml
@@ -18,10 +18,10 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Category.Description, htmlAttributes: new {@class = "control-label col-md-2"})
+            @Html.LabelFor(model => model.Category.Description, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Category.Description, new {htmlAttributes = new {@class = "form-control"}})
-                @Html.ValidationMessageFor(model => model.Category.Description, "", new {@class = "text-danger"})
+                @Html.EditorFor(model => model.Category.Description, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Category.Description, "", new { @class = "text-danger" })
             </div>
         </div>
 
@@ -30,7 +30,8 @@
             <div class="form-group">
                 <label class="control-label col-md-2" for="Osoba">Osoba</label>
                 <div class="col-md-10">
-                    @Html.DropDownListFor(model => model.SelectedPersonId, new SelectList(Model.Persons, "Id", "FullName"))
+                    @Html.DropDownListFor(model => model.SelectedPersonId,
+                    new SelectList(Model.Persons, "Id", "FullName"), new { @class = "form-control" })
                 </div>
             </div>
         }
