--- a/HouseAccounting.Web/Views/Person/PersonDetail.cshtml
+++ b/HouseAccounting.Web/Views/Person/PersonDetail.cshtml
@@ -1,7 +1,7 @@
 ﻿@model HouseAccounting.DTOS.PersonDto
 
     <dl class="dl-horizontal">
-        <dt>
+        <dt class="col-md-10">
             @Html.DisplayNameFor(model => model.FirstName)
         </dt>
 
@@ -16,5 +16,4 @@
         <dd>
             @Html.DisplayFor(model => model.LastName)
         </dd>
-
     </dl>
