--- a/HouseAccounting.Web/Views/Income/Index.cshtml
+++ b/HouseAccounting.Web/Views/Income/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model HouseAccounting.Web.Models.Incomes.IncomeListViewModel
 
-<h2>Kategorie příjmů</h2>
+<h2>Příjmy</h2>
 
 <p>
     @Html.ActionLink("Vytvořit nový příjem", "Create")
