--- a/HouseAccounting.Web/Views/IncomeCategory/Create.cshtml
+++ b/HouseAccounting.Web/Views/IncomeCategory/Create.cshtml
@@ -1,6 +1,6 @@
 ﻿@model HouseAccounting.Web.Models.IncomeCategories.IncomeCategoryCreateViewModel
 
-<h2>Nová kategorie</h2>
+<h2>Nová kategorie příjmů</h2>
 
 @using (Html.BeginForm())
 {
