--- a/HouseAccounting.Web/Views/IncomeCategory/Index.cshtml
+++ b/HouseAccounting.Web/Views/IncomeCategory/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model HouseAccounting.Web.Models.IncomeCategories.IncomeCategoryListViewModel
 
-<h2>Kategorie</h2>
+<h2>Kategorie příjmů</h2>
 
 <p>
     @Html.ActionLink("Vytvořit novou kategorii příjmů", "Create")
