--- a/HouseAccounting.Web/Views/Expenditure/Create.cshtml
+++ b/HouseAccounting.Web/Views/Expenditure/Create.cshtml
@@ -1,6 +1,6 @@
-﻿@model HouseAccounting.Web.Models.Incomes.IncomeCreateViewModel
+﻿@model HouseAccounting.Web.Models.Expenditures.ExpenditureCreateViewModel
 
-<h2>Nový příjem</h2>
+<h2>Nový výdaj</h2>
 
 @using (Html.BeginForm())
 {
@@ -9,29 +9,29 @@
     <div class="form-horizontal">
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.Income.Id)
+        @Html.HiddenFor(model => model.Expenditure.Id)
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Income.CreatedShortDate, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Expenditure.CreatedShortDate, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Income.CreatedShortDate, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Income.CreatedShortDate, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.Expenditure.CreatedShortDate, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Expenditure.CreatedShortDate, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Income.Amount, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Expenditure.Amount, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Income.Amount, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Income.Amount, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.Expenditure.Amount, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Expenditure.Amount, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Income.Description, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Expenditure.Description, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Income.Description, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Income.Description, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.Expenditure.Description, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Expenditure.Description, "", new { @class = "text-danger" })
             </div>
         </div>
 
@@ -60,7 +60,7 @@
 }
 
 <div>
-    @Html.ActionLink("Zpět na seznam příjmů", "Index")
+    @Html.ActionLink("Zpět na seznam výdajů", "Index")
 </div>
 
 @section Scripts {
