--- a/HouseAccounting.Web/Views/Shared/_Layout.cshtml
+++ b/HouseAccounting.Web/Views/Shared/_Layout.cshtml
@@ -22,6 +22,7 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Přehled", "Index", "Home")</li>
                     <li>@Html.ActionLink("Příjmy", "Index", "Income")</li>
+                    <li>@Html.ActionLink("Výdaje", "Index", "Expenditure")</li>
                     <li class="dropdown">
                         <a class="dropdown-toggle" data-toggle="dropdown" href="#">Číselníky<span class="caret"></span></a>
                         <ul class="dropdown-menu">
