quick shortcuts for expenditures

--- a/HouseAccounting.Web/Views/Expenditure/Create.cshtml
+++ b/HouseAccounting.Web/Views/Expenditure/Create.cshtml
@@ -2,7 +2,7 @@
 
 <h2>Nový výdaj</h2>
 
-@using (Html.BeginForm())
+@using (Html.BeginForm("Create", "Expenditure"))
 {
     @Html.AntiForgeryToken()
 
