--- a/HouseAccounting.Web/Views/Home/Index.cshtml
+++ b/HouseAccounting.Web/Views/Home/Index.cshtml
@@ -18,6 +18,6 @@
                 personId = personExpenditure.PersonId,
                 expenditureCategoryId = personExpenditure.ExpenditureCategory.Id
             },
-            new { @class = "btn btn-lg btn-info .caret" });
+            new { @class = "btn btn-lg btn-info" });
     }
 </div>
