--- a/HouseAccounting.Web/Views/Income/Index.cshtml
+++ b/HouseAccounting.Web/Views/Income/Index.cshtml
@@ -21,7 +21,7 @@
         </td>
         <td>
             <b>
-                @Html.DisplayFor(modelItem => income.AmountString)
+                @Html.DisplayFor(modelItem => income.AmountInCurrency)
             </b>
         </td>
         <td>
