monthly statistics detail

--- a/HouseAccounting.Web/Views/Shared/_Layout.cshtml
+++ b/HouseAccounting.Web/Views/Shared/_Layout.cshtml
@@ -21,6 +21,7 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Přehled", "Index", "Home")</li>
+                    <li>@Html.ActionLink("Aktuální měsíční přehled", "MonthlyStatistics", "Expenditure")</li>
                     <li>@Html.ActionLink("Příjmy", "Index", "Income")</li>
                     <li>@Html.ActionLink("Výdaje", "Index", "Expenditure")</li>
                     <li class="dropdown">
