--- a/HouseAccounting.Web/Views/Expenditure/Create.cshtml
+++ b/HouseAccounting.Web/Views/Expenditure/Create.cshtml
@@ -22,7 +22,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Expenditure.Amount, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Expenditure.Amount, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Expenditure.Amount, new { htmlAttributes = new { @class = "form-control", autofocus = "", Value = "" } })
                 @Html.ValidationMessageFor(model => model.Expenditure.Amount, "", new { @class = "text-danger" })
             </div>
         </div>
