monthly statistics contains total sum for monthly overview

--- a/HouseAccounting.Web/Views/Expenditure/Index.cshtml
+++ b/HouseAccounting.Web/Views/Expenditure/Index.cshtml
@@ -26,7 +26,7 @@
                     </td>
                     <td>
                         <b>
-                            @Html.DisplayFor(modelItem => expenditure.AmountInCurrency)
+                            @Html.DisplayFor(modelItem => expenditure.Amount.ToCurrencyString())
                         </b>
                     </td>
                     <td>
