--- a/HouseAccounting.Web/Views/Expenditure/Create.cshtml
+++ b/HouseAccounting.Web/Views/Expenditure/Create.cshtml
@@ -12,11 +12,14 @@
         @Html.HiddenFor(model => model.Expenditure.Id)
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Expenditure.CreatedShortDate, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Expenditure.CreatedShortDate, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Expenditure.CreatedShortDate, "", new { @class = "text-danger" })
-            </div>
+            @{
+                var created = Model.Expenditure.Created.ToShortDateString();
+                @Html.LabelFor(model => created, "Datum", htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => created, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => created, "", new { @class = "text-danger" })
+                </div>
+            }
         </div>
 
         <div class="form-group">
