--- a/HouseAccounting.Web/Views/Expenditure/ExpenditureEdit.cshtml
+++ b/HouseAccounting.Web/Views/Expenditure/ExpenditureEdit.cshtml
@@ -10,6 +10,14 @@
         @Html.HiddenFor(model => model.Expenditure.Id)
 
         <div class="form-group">
+            @Html.LabelFor(model => model.Expenditure.Created, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Expenditure.Created, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Expenditure.Created, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
             @Html.LabelFor(model => model.Expenditure.Amount, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Expenditure.Amount, new { htmlAttributes = new { @class = "form-control" } })
