--- a/HouseAccounting.Web/Views/Shared/_Layout.cshtml
+++ b/HouseAccounting.Web/Views/Shared/_Layout.cshtml
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html>
+<html lang="cs">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -25,13 +25,13 @@
                     <li>@Html.ActionLink("Příjmy", "Index", "Income")</li>
                     <li>@Html.ActionLink("Výdaje", "Index", "Expenditure")</li>
                     <li class="dropdown">
-                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Šablony<span class="caret"></span></a>
+                        <a class="dropdown-toggle" data-toggle="dropdown">Šablony<span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li>@Html.ActionLink("Šablony výdajů ", "Index", "IncomeTemplate")</li>
                         </ul>
                     </li>
                     <li class="dropdown">
-                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Číselníky<span class="caret"></span></a>
+                        <a class="dropdown-toggle" data-toggle="dropdown">Číselníky<span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li>@Html.ActionLink("Osoby", "Index", "Person")</li>
                             <li>@Html.ActionLink("Kategorie příjmů", "Index", "IncomeCategory")</li>
